--- a/src/makefile
+++ b/src/makefile
@@ -10,10 +10,10 @@
 OBJ_DIR = obj
 EXE_DIR = exe
 
-LIST = 7seg
-LIST += ADC
-LIST += AWU
-LIST += beCAN
+LIST = AWU
+# LIST += 7seg
+# LIST += ADC
+# LIST += beCAN
 LIST += BEEP
 LIST += blink
 LIST += blink_key
@@ -23,31 +23,31 @@ LIST += blink_key_tli_irq
 LIST += EEPROM
 LIST += FLASH
 LIST += GPIO
-LIST += I2C
-LIST += i2c_gpio_DHT11
-LIST += i2c_irq_DHT11
-LIST += i2c_irq_eeprom
+# LIST += I2C
+# LIST += i2c_gpio_DHT11
+# LIST += i2c_irq_DHT11
+# LIST += i2c_irq_eeprom
 LIST += IWDG
-LIST += joystick_adc
-LIST += key_full
-LIST += lan
-LIST += led_full
+# LIST += joystick_adc
+# LIST += key_full
+# LIST += lan
+# LIST += led_full
 LIST += mem_reg
-LIST += PWM
-LIST += RFID
-LIST += SPI
-LIST += spi_eeprom
+# LIST += PWM
+# LIST += RFID
+# LIST += SPI
+# LIST += spi_eeprom
 LIST += stm8s_debug_top
 LIST += TIM1
-LIST += TIM2_3_5
-LIST += TIM4_6
+# LIST += TIM2_3_5
+# LIST += TIM4_6
 LIST += timer_irq
 LIST += uart_irq_no
 LIST += uart_irq_rtx
 LIST += uart_irq_rx
 LIST += vsprintf_test
 LIST += WWDG
-LIST += zigbee
+# LIST += zigbee
 
 all:
 	for i in $(LIST); do \
